[package]
name = "echosrv"
version = "0.1.0"
authors = ["Jerome Boisvert-Chouinard <jerome_boisvertchouinard@trendmicro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["tcp"]}
futures = "0.3"